# Language_helper

./: .dockerignore  .gitignore
api/: localhost+3.pem  main.py  pyproject.toml  ruff_format.bat  users.db
api/db/: books.py  dto.py  models.py  pages.py  phrases.py  syllables.py  users.py
api/services/: books.py  dto.py  models.py  phrases.py  syllables.py  users.py
api/wooordhunt/: models.py  parser.py
deployment/: Dockerfile_api  Dockerfile_nginx  deploy.sh
frontend/: .env  package-lock.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: BookReader.js  BooksList.js  LearnPhrases.js  LearnSyllables.js  PhraseDetail.js  Phrases.css  PhrasesList.js  SearchBar.js  SyllableDetail.js  SyllableForm.js  SyllablesList.js
nginx/conf/: localhost+3-key.pem  nginx.conf
