[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.2",
    "beautifulsoup4==4.14.3 ",
    "html5lib==1.1",
    "psycopg2[binary]==2.9.11",
    "itsdangerous==2.2.0",
    "gTTS==2.5.4",
    "uvicorn==0.24.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "waitress==2.1.2"
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
